testsuite/tests/module/mod122.stderr

mod122.hs:5:6: error: Not in scope: type constructor or class ‘C’
