testsuite/tests/module/mod122.hs
-- !!! exporting a method (but not its class)
module M where
import Mod122_A

f :: C a => a -> a
f = m1 
